<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_b"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Các trường nhập liệu cho thông tin đăng ký -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/create_your_n_account"
        android:textColor="@color/blackcolor"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:hint="@string/phone"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_a"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/whitecolor" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="Đã có tài khoản !! Đăng nhập"
        android:textColor="@color/fullwhite" />

    <!-- Các liên kết hỗ trợ -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qu_n_m_t_kh_u"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textViewTermsAndConditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/i_u_kho_n"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>
